--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div>
                     <input type="email" name="email" class="email" placeholder="E-mail" tabindex="2">
                   </div>
-                  <div class="warning">Одно или несколько полей содержит ошибочные данные</div>
+                  <div class="warning">Одно или несколько полей содержат ошибочные данные</div>
                   <div>
                     <button type="submit" class="button_submit" tabindex="3">Отправить</button>
                   </div>
